# Travel-Recommendation-System

./: .gitignore  .pre-commit-config.yaml  0355.py  README.md  demo.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: config.yaml
notebooks/: travel_recommendation_analysis.ipynb
scripts/: train_evaluate.py
src/: __init__.py
src/data/: __init__.py  loader.py
src/evaluation/: __init__.py  metrics.py
src/utils/: __init__.py  helpers.py
tests/: test_recommendation_system.py
